syntax = "proto3";

package provider;

option go_package = "berty.tech/core/network/p2p/protocol/provider";

message ProviderInfo {
  string id = 1;
  bytes peer_info = 2;
}
